Fixed alignment of step header text

--- a/src/ui/canvas/StepDisplay.css
+++ b/src/ui/canvas/StepDisplay.css
@@ -13,6 +13,7 @@
 .step__header {
     padding: 0.2em 0;
     display: flex;
+    align-items: center;
     cursor: move;
     border-bottom: solid black 1px;
     height: 24px;
